js part fullfit

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 
 <section class="header">
 
-    <div class="wallpaper">
         <h1>jQuery Car Racer</h1>
         <input type="button" value="Race!" id="Go">
         <input type="button" value="Reset" id="Reset">
-    </div>
 
 </section>
 
 <section class="road">
     <div id="RaceTrack">
-        <img width="4%" id="Car1" class="Car" src="./img/car1.png" alt="Green Car">
+        <!--<img width="4%" id="Car1" class="Car" src="./img/car1.png" alt="Green Car">
         <img width="4%" id="Car2" class="Car" src="./img/car2.png" alt="Red Car">
         <img width="4%" id="Car3" class="Car" src="./img/car3.png" alt="yellow Car">
         <img width="4%" id="Car4" class="Car" src="./img/car4.png" alt="Green Car">
@@ -30,10 +28,23 @@
         <img width="4%" id="Car6" class="Car" src="./img/car6.png" alt="yellow Car">
         <img width="4%" id="Car7" class="Car" src="./img/car7.png" alt="Green Car">
         <img width="4%" id="Car8" class="Car" src="./img/car8.png" alt="Red Car">
-        <img width="4%" id="Car9" class="Car" src="./img/car9.png" alt="yellow Car">
+        <img width="4%" id="Car9" class="Car" src="./img/car9.png" alt="yellow Car"> -->
     </div>
 </section>
-
+<section class="nParticipantes">
+    <label for="coches">Escoge cuantos coches deseas que participen</label>
+    <select name="coches" id="coches">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+    </select>
+</section>
     <!--
     <div id="RaceInfoCntnr" class="ClearFix">
         <h2>Results</h2>
