--- a/index.html
+++ b/index.html
@@ -11,29 +11,23 @@
 <body id="Race">
 
 <section class="header">
-
-        <h1>jQuery Car Racer</h1>
-        <input type="button" value="Race!" id="Go">
-        <input type="button" value="Reset" id="Reset">
-
+    <img src="./img/cartelFinal.png" alt="" id="iniciar">
+    <div class="button1">
+        <input type="button" value="" id="Go">
+    </div>
+    <div class="button2">
+        <input type="button" value="" id="Reset">
+    </div>
+        
 </section>
 
 <section class="road">
-    <div id="RaceTrack">
-        <!--<img width="4%" id="Car1" class="Car" src="./img/car1.png" alt="Green Car">
-        <img width="4%" id="Car2" class="Car" src="./img/car2.png" alt="Red Car">
-        <img width="4%" id="Car3" class="Car" src="./img/car3.png" alt="yellow Car">
-        <img width="4%" id="Car4" class="Car" src="./img/car4.png" alt="Green Car">
-        <img width="4%" id="Car5" class="Car" src="./img/car5.png" alt="Red Car">
-        <img width="4%" id="Car6" class="Car" src="./img/car6.png" alt="yellow Car">
-        <img width="4%" id="Car7" class="Car" src="./img/car7.png" alt="Green Car">
-        <img width="4%" id="Car8" class="Car" src="./img/car8.png" alt="Red Car">
-        <img width="4%" id="Car9" class="Car" src="./img/car9.png" alt="yellow Car"> -->
-    </div>
+    <div id="RaceTrack"></div>
 </section>
 <section class="nParticipantes">
-    <label for="coches">Escoge cuantos coches deseas que participen</label>
+    <label for="coches"></label>
     <select name="coches" id="coches">
+        <option value="0">0</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -45,7 +39,7 @@
         <option value="9">9</option>
     </select>
 </section>
-    <!--
+<!--<section class=resultados>
     <div id="RaceInfoCntnr" class="ClearFix">
         <h2>Results</h2>
         <div id="RaceInfo1" class="RaceInfo">Car 1 <span></span>
@@ -63,7 +57,8 @@
         <div id="RaceInfo7" class="RaceInfo">Car 7 <span></span>
         </div>
     </div>
--->
+    </section>
+
     <!--Load CDN First-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--If CDN Fails to load, serve up the local version-->
