--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <option value="9">9</option>
     </select>
 </section>
-<!--<section class=resultados>
+<section class=resultados>
     <div id="RaceInfoCntnr" class="ClearFix">
         <h2>Results</h2>
         <div id="RaceInfo1" class="RaceInfo">Car 1 <span></span>
@@ -58,7 +58,6 @@
         </div>
     </div>
     </section>
-
     <!--Load CDN First-->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--If CDN Fails to load, serve up the local version-->
