--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
 </section>
 <section class=resultados>
     <div id="RaceInfoCntnr" class="ClearFix">
-        <h2>Results</h2>
+        <h2>Resultados</h2>
+        <div id="ResultadosDeCarrera">
+           
+
+
+        </div>
+        <!--
         <div id="RaceInfo1" class="RaceInfo">Car 1 <span></span>
         </div>
         <div id="RaceInfo2" class="RaceInfo">Car 2 <span></span>
@@ -55,7 +61,7 @@
         <div id="RaceInfo6" class="RaceInfo">Car 6 <span></span>
         </div>
         <div id="RaceInfo7" class="RaceInfo">Car 7 <span></span>
-        </div>
+        </div>*/-->
     </div>
     </section>
     <!--Load CDN First-->
