beta 4 fixed reset tablon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </section>
 
 <section class="road">
-    <div id="RaceTrack"></div>
+    <div id="PistaDeCarrera"></div>
 </section>
 <section class="nParticipantes">
     <label for="coches"></label>
