beta 5 fixed some references

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section class="header">
     <img src="./img/cartelFinal.png" alt="" id="iniciar">
     <div class="button1">
-        <input type="button" value="" id="Go">
+        <input type="button" value="" id="Start">
     </div>
     <div class="button2">
         <input type="button" value="" id="Reset">
