--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 <head>
     <title>Car Racing Game In jQuery</title>
-    <!-- [if IE] -->
     <script src="./js/scripts.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
-    <! [endif] -->
 </head>
 
 
@@ -40,7 +38,7 @@
     </select>
 </section>
 <section class=resultados>
-    <div id="RaceInfoCntnr" class="ClearFix">
+    <div id="InfoCarrera" class="ClearFix">
         <h2>Resultados</h2>
         <div id="ResultadosDeCarrera">
             <p></p>
@@ -48,12 +46,8 @@
         
     </div>
     </section>
-    <!--Load CDN First-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--If CDN Fails to load, serve up the local version-->
-    <script>
-        window.jQuery || document.write('<script src="jQuery.js"><\/script>');
-    </script>
+    <!--Para cargar jQuery por medio de su servidor-->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>    
 </body>
 
 </html>
