--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </select>
 </section>
 <section class=resultados>
-    <div id="InfoCarrera" class="ClearFix">
+    <div id="InfoCarrera">
         <h2>Resultados</h2>
         <div id="ResultadosDeCarrera">
             <p></p>
