--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Car Racing Game In jQuery</title>
+    <title>Carrera Ilerna</title>
     <script src="./js/scripts.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,10 +11,10 @@
 <section class="header">
     <img src="./img/cartelFinal.png" alt="" id="iniciar">
     <div class="button1">
-        <input type="button" value="" id="Start">
+        <input type="button" value="Start" id="Start">
     </div>
-    <div class="button2">
-        <input type="button" value="" id="Reset">
+    <div class="button2" >
+        <input type="button" value="Reset" id="Reset">
     </div>
         
 </section>
@@ -24,6 +24,7 @@
 </section>
 <section class="nParticipantes">
     <label for="coches"></label>
+    <label for="coches">Participantes:</label>
     <select name="coches" id="coches">
         <option value="0">0</option>
         <option value="1">1</option>
